--- a/pi4/pubspec.yaml
+++ b/pi4/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   dart_jsonwebtoken: ^2.17.0
   internet_connection_checker: ^3.0.1
   shared_preferences: ^2.5.3
+  url_launcher: ^6.3.2
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
